# upload_Access_to_Database_sql

./: README.md  db_settings.json  enhanced_converter.py  requirements.txt  shamela_gui_src.spec  test_final_symbols.py  test_separator_lines.py
Trash/: README.md  json_converter.py  main.py  modern_shamela_gui.py  project_structure.txt  quick_example.py  run_shamela_converter.bat  shamela_converter.backup  shamela_gui.backup  shamela_gui.spec  test_converter.py  test_db_connection.py  test_session_report.py  test_session_report_gui.py  test_special_separator.py  test_symbols.py
Trash/ShamielaBookConverter/: LICENSE  README_FIX.md  ShamielaConverter.spec  ShamielaConverter_Fixed.spec  build_exe.py  build_exe_fixed.py  build_fixed.bat  fix_mysql.py  hook-mysql.connector.py  main.py  pyproject.toml  setup.py  test_fixed.bat  version_info.txt  تقرير_إكمال_المشروع.md
Trash/ShamielaBookConverter/docs/: USER_GUIDE.md
Trash/ShamielaBookConverter/resources/data/: config.json  database_schema.sql
Trash/ShamielaBookConverter/resources/icons/: icon_placeholder.txt
Trash/ShamielaBookConverter/src/: shamela_converter.py  shamela_gui.py  simple_bok_support.py
Trash/docs/: BOK_Integration_Report.md  BOK_Problem_Solution.md  BOK_SOLUTION_SUMMARY.md  BOK_Solutions_Summary.md  USER_GUIDE.md  bok_analysis_report.md  (+4 more)
docs/: BOK_Files_Solution_Guide.md  PROJECT_SUMMARY.md  README.md  advanced_progress_report.md  bok_analysis_detailed_report.md  gui_fix_report.md  stats_extraction_fix.md
src/: db_settings.json  session_report_fix_verification.md  shamela_converter.py  shamela_converter003.backup  إصلاح_مكتمل.md  تقرير_إصلاح_التصدير.md
(+46 files in other folders)
